common/notion-sync/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notion-sync
  namespace: nokiy
  labels:
    app.kubernetes.io/name: notion-sync
    app.kubernetes.io/instance: notion-sync
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: notion-sync
      app.kubernetes.io/instance: notion-sync
  template:
    metadata:
      labels:
        app.kubernetes.io/name: notion-sync
        app.kubernetes.io/instance: notion-sync
    spec:
      containers:
        - name: notion-sync
          image: ghcr.io/reonokiy/notion-sync:v0.0.5
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: notion-sync-config
              mountPath: /app/config.toml
              subPath: config.toml
              readOnly: true
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
      volumes:
        - name: notion-sync-config
          secret:
            secretName: notion-sync-secrets
