common/notion-sync/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: notion-sync
  namespace: nokiy
  labels:
    app.kubernetes.io/name: notion-sync
    app.kubernetes.io/instance: notion-sync
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: notion-sync
    app.kubernetes.io/instance: notion-sync
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
