common/notion-sync/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notion-sync
  namespace: nokiy
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: notion-sync.nokiy.net

spec:
  tls:
    - hosts:
        - notion-sync.nokiy.net
      secretName: notion-sync-tls

  rules:
    - host: notion-sync.nokiy.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notion-sync
                port:
                  number: 3000
